Upgrade Rangsseite optisch angepasst und Vote-Seite hinzugefügt

--- a/bewerben.html
+++ b/bewerben.html
@@ -72,6 +72,7 @@
     <a href="creator.html">Content Creator</a>
     <a href="social.html">Social Media</a>
     <a href="raenge.html">Ränge</a>
+    <a href="vote.html">Vote</a>
   </nav>
   <main>
     <section class="card" style="text-align:center;">
