--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
     <a href="creator.html">Content Creator</a>
     <a href="social.html">Social Media</a>
     <a href="raenge.html">Ränge</a>
+    <a href="vote.html">Vote</a>
   </nav>
 
   <main>
@@ -181,8 +182,9 @@
         <p>Die Bibliothek für alles was du brauchst findest du in unserem WIKI</p>
       </div>
       <div>
-        <a href="https://corotexus-developement.github.io/ParadiseNetworkWiki/index.html" target="_blank" class="wiki-btn">
-          ParadiseNetwork-Wiki
+        <a href="#" target="_blank" class="wiki-btn">
+          ParadiseNetwork-Wiki<br>
+          [Bald verfügbar]
         </a>
       </div>
     </section>
