Anpassung Über uns Geschichte Verweis das man es anklicken kann

--- a/ueber-uns.html
+++ b/ueber-uns.html
@@ -288,7 +288,7 @@
     <!-- ...weitere Abschnitte wie Geschichte, Werte etc... -->
     <section class="card" style="cursor:pointer;" onclick="window.location.href='geschichte.html'" tabindex="0" onkeydown="if(event.key==='Enter'){window.location.href='geschichte.html'}">
       <h2>Die Geschichte von ParadiseNetwork</h2>
-      <p style="color:#888;">Hier steht bald die Sagen umwobene Geschichte von ParadiseNetwork...</p>
+      <p style="color:#888;">Klicke hier und entdecke die Geschichte von ParadiseNetwork.us</p>
       <!-- Teamvorstellung, Geschichte, Werte etc. -->
     </section>
   </main>
