Anpassung der Guides-Seite

--- a/guides.html
+++ b/guides.html
@@ -192,6 +192,7 @@
         <div class="guide-section-content">
           <ul class="cmd-list">
             <li>/spawn <span class="cmd-desc">Teleportiert dich zum Hauptspawn.</span></li>
+            <li>/farmwelt <span class="cmd-desc">Öffnet den Farmwelt Teleport.</span></li>
             <li>/sethome <span class="cmd-desc">Setzt deinen Heimatpunkt.</span></li>
             <li>/home <span class="cmd-desc">Teleportiert dich zu deinem Heimatpunkt.</span></li>
             <li>/warps </name> <span class="cmd-desc">Zeigt dir mögliche Teleportationspunkte an.</span></li>
@@ -210,9 +211,13 @@
         <div class="guide-section-content">
           <ul class="tips-list">
             <li>Nutze <b>/sethome</b> an wichtigen Orten, um später immer schnell zurückzukehren.</li>
+            <br>
             <li>Verkaufe überschüssige Items mit /sellgui oder an andere Spieler.</li>
+            <br>
             <li>Schließe dich mit Freunden zusammen und gründe ein Land oder Nation!</li>
+            <br>
             <li>Halte Ausschau nach Events – es gibt oft tolle Preise zu gewinnen.</li>
+           <br>
             <li>Frage bei Problemen einfach im Discord nach Hilfe.</li>
           </ul>
         </div>
@@ -224,10 +229,15 @@
         </button>
         <div class="guide-section-content">
           <ul>
+            Bald verfügbar
+          </ul>
+<!-- Hier können PDF-Links oder andere Ressourcen hinzugefügt werden 
+          <ul>
             <li><a href="#">PDF: Serverregeln</a></li>
             <li><a href="#">PDF: Grundstück-Guide</a></li>
             <li><a href="#">PDF: Wirtschaft & Jobs</a></li>
           </ul>
+-->
         </div>
       </div>
       <div class="guide-section">
@@ -236,28 +246,33 @@
           <span class="arrow">&#9654;</span>
         </button>
         <div class="guide-section-content">
+          <ul>
+            Bald Verfügbar
+          </ul>
+<!-- Hier können Links zu YouTube-Videos oder anderen Video-Ressourcen hinzugefügt werden 
           <ul style="list-style: none; padding: 0;">
             <li>
-              <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
+              <a href="#" target="_blank">
                 🟢 So Verwaltest du dein Land – Video ansehen
               </a>
             </li>
             <li>
-              <a href="https://www.youtube.com/watch?v=QH2-TGUlwu4" target="_blank">
+              <a href="#" target="_blank">
                 🟢 So funktioniert dies das 1 – Video ansehen
               </a>
             </li>
             <li>
-              <a href="https://www.youtube.com/watch?v=3GwjfUFyY6M" target="_blank">
+              <a href="#" target="_blank">
                 🟢 So funktioniert dies das 2 – Video ansehen
               </a>
             </li>
             <li>
-              <a href="https://www.youtube.com/@ParadiseNetwork" target="_blank">
+              <a href="#" target="_blank">
                 ➕ Weitere Tutorials findest du hier
               </a>
             </li>
           </ul>
+-->
         </div>
       </div>
     </div>
