Anpassung eventseite aktuallisiert

--- a/guides.html
+++ b/guides.html
@@ -139,7 +139,7 @@
   <button class="hamburger" id="hamburger" aria-label="Navigation öffnen/schließen"><span></span></button>
   <header>
     <h1>Guides & Hilfe</h1>
-    <p>Praktische Tutorials, Hilfestellungen und PDF-Downloads für dein Abenteuer.</p>
+    <p>Praktische Tutorials, Hilfestellungen für dein Abenteuer.</p>
   </header>
   <nav id="mainNav" class="collapsed">
     <a href="index.html">Startseite</a>
@@ -158,7 +158,7 @@
   <main>
     <section class="card">
       <h2>Guides & Hilfe</h2>
-      <p>Praktische Tutorials, Hilfestellungen und PDF-Downloads für dein Abenteuer.</p>
+      <p>Praktische Tutorials, Hilfestellungen für dein Abenteuer.</p>
     </section>
 
     <div class="guide-accordion">
