--- a/events.html
+++ b/events.html
@@ -39,28 +39,33 @@
         <div class="event-mc-block" style="background:#e3f6d5;">
           <div class="event-mc-header" style="background:#7ec850;">
             <span class="event-mc-icon">🎉</span>
-            <strong>Sommerfest</strong>
+            <strong>ParadiseNetwork.us Server Release</strong>
           </div>
           <div class="event-mc-body">
-            <span>Datum Uhrzeit</span><br>
-            <span>Ort: Spawnplatz</span>
-            <p>Feiere mit uns den Sommer! Mit Minispielen, Giveaways und mehr.</p>
+            <span>28. Juni 2025 -
+              14:00 Uhr
+            </span><br>
+            <span>Ort: ParadiseNetwork.us</span>
+            <p>Feiere mit uns den offiziellen Release von ParadiseNetwork!<br>
+            <hr>
+            Der Perfekte Zeitpunkt schon von beginn an dabei zu sein!</p>
+            </p>
           </div>
         </div>
         <div class="event-mc-block" style="background:#fffbe3;">
           <div class="event-mc-header" style="background:#f7d560;">
             <span class="event-mc-icon">🏆</span>
-            <strong>Bau-Contest: Fantasy</strong>
+            <strong>Bald Verfügbar</strong>
           </div>
           <div class="event-mc-body">
-            <span>Datum Uhrzeit</span><br>
-            <span>Ort: Freebuild</span>
-            <p>Zeige deine Kreativität und gewinne tolle Preise!</p>
+            <span></span><br>
+            <span></span>
+            <p>Sei gespannt :)</p>
           </div>
         </div>
       </div>
       <div class="events-mc-calendar">
-        <h4><span style="font-family: 'Segoe UI Emoji', 'Noto Color Emoji', sans-serif;">📅</span> Juli 2025</h4>
+        <h4><span style="font-family: 'Segoe UI Emoji', 'Noto Color Emoji', sans-serif;">📅</span> Juni 2025</h4>
         <div class="calendar-table-wrapper">
           <table class="calendar-table-mc">
             <thead>
@@ -74,7 +79,7 @@
               </tr>
               <tr>
                 <td>7</td><td>8</td><td>9</td><td>10</td><td>11</td>
-                <td class="event-mc-day" title="Sommerfest">12</td>
+                <td>12</td>
                 <td>13</td>
               </tr>
               <tr>
@@ -84,7 +89,7 @@
                 <td>21</td><td>22</td><td>23</td><td>24</td><td>25</td><td>26</td><td>27</td>
               </tr>
               <tr>
-                <td>28</td><td>29</td><td>30</td><td>31</td><td></td><td></td><td></td>
+                <td class="event-mc-day" title="Server Release">28</td><td>29</td><td>30</td><td>31</td><td></td><td></td><td></td>
               </tr>
             </tbody>
           </table>
@@ -96,21 +101,27 @@
         <div class="event-mc-block past" style="background:#e3f0fa;">
           <div class="event-mc-header" style="background:#b5e0fa;">
             <span class="event-mc-icon">🥚</span>
-            <strong>Event 1</strong>
+            <strong>Es war einmal...</strong>
           </div>
           <div class="event-mc-body">
-            <span>Event Ende</span>
-            <p>Hier könnte stehen was beim Event war.</p>
+            <span></span>
+            <p>Es war einmal ein Event.<br>
+              Aber dieses muss erst gewesen sein,<br>
+              damit es hier stehen kann.<br>
+            </p>
           </div>
         </div>
         <div class="event-mc-block past" style="background:#f0f0f0;">
           <div class="event-mc-header" style="background:#e0e0e0;">
             <span class="event-mc-icon">❄️</span>
-            <strong>Event 2</strong>
+            <strong>Es war Einmal...</strong>
           </div>
           <div class="event-mc-body">
-            <span>Eventzeit</span>
-            <p>Hier ist Platz für ein weiteres cooles Event.</p>
+            <span></span>
+            <p>Es war einmal ein Event.<br>
+              Aber dieses muss erst gewesen sein,<br>
+              damit es hier stehen kann.<br>
+            </p>
           </div>
         </div>
       </div>
