--- a/ueber-uns.html
+++ b/ueber-uns.html
@@ -257,31 +257,31 @@
           <img src="bild/team/derder96.png" alt="derder96">
           <h3>derder96</h3>
           <div class="role">Owner</div>
-          <p>Dein Text</p>
+          <p>Text folgt...</p>
         </div>
         <div class="team-member">
           <img src="bild/team/HoChilli.jpg" alt="HoChilli">
           <h3>HoChilli</h3>
           <div class="role">Co-Owner</div>
-          <p>Dein Text</p>
+          <p>Text folgt...</p>
         </div>
         <div class="team-member">
           <img src="bild/team/leonie.jpg" alt="Leonie">
           <h3>Leonie</h3>
           <div class="role">Co-Owner</div>
-          <p>Dein Text</p>
+          <p>Text folgt...</p>
         </div>
         <div class="team-member">
           <img src="bild/team/olfialex.png" alt="OlfiAlex">
           <h3>OlfiAlex</h3>
           <div class="role">Test-Developer</div>
-          <p>Dein Text</p>
+          <p>Text folgt...</p>
         </div>
         <div class="team-member">
           <img src="bild/team/xtedary.png" alt="xTedary">
           <h3>xTedary</h3>
           <div class="role">Supporter</div>
-          <p>Dein Text</p>
+          <p>Text folgt...</p>
         </div>
       </div>
     </section>
