--- a/ueber-uns.html
+++ b/ueber-uns.html
@@ -271,16 +271,28 @@
           <div class="role">Co-Owner</div>
           <p>Text folgt...</p>
         </div>
+                <div class="team-member">
+          <img src="bild/team/pfeiltasten.png" alt="Pfeiltasten">
+          <h3>Pfeiltasten</h3>
+          <div class="role">Developer</div>
+          <p>Text folgt...</p>
+        </div>
         <div class="team-member">
           <img src="bild/team/olfialex.png" alt="OlfiAlex">
           <h3>OlfiAlex</h3>
-          <div class="role">Test-Developer</div>
+          <div class="role">T-Developer</div>
           <p>Text folgt...</p>
         </div>
         <div class="team-member">
           <img src="bild/team/xtedary.png" alt="xTedary">
           <h3>xTedary</h3>
           <div class="role">Supporter</div>
+          <p>Text folgt...</p>
+        </div>
+        <div class="team-member">
+          <img src="bild/team/sturmbrecher.png" alt="Sturm_Brecher">
+          <h3>Sturm_Brecher</h3>
+          <div class="role">T-Supporter</div>
           <p>Text folgt...</p>
         </div>
       </div>
