Creator Link Patch

--- a/creator.html
+++ b/creator.html
@@ -215,9 +215,9 @@
           <h3>Sturm_Brecher</h3>
           <div class="desc">Beschreibung folgt...</div>
           <div class="creator-links">
-            <a href="Noch Nichts" target="_blank" class="creator-link-btn youtube">YouTube</a>
+            <a href="#" target="_blank" class="creator-link-btn youtube">YouTube</a>
             <a href="https://www.tiktok.com/@sturm_brecher?_t=ZN-8xkeay9FlFW&_r=1" target="_blank" class="creator-link-btn tiktok">TikTok</a>
-            <a href="Noch Nichts" target="_blank" class="creator-link-btn twitch">Twitch</a>
+            <a href="#" target="_blank" class="creator-link-btn twitch">Twitch</a>
           </div>
         </div>
         <div class="creator-card">
