Coro zum Team hinzugefügt

--- a/ueber-uns.html
+++ b/ueber-uns.html
@@ -259,36 +259,49 @@
           <div class="role">Owner</div>
           <p>Text folgt...</p>
         </div>
+
         <div class="team-member">
           <img src="bild/team/HoChilli.jpg" alt="HoChilli">
           <h3>HoChilli</h3>
           <div class="role">Co-Owner</div>
           <p>Text folgt...</p>
         </div>
+      
         <div class="team-member">
           <img src="bild/team/leonie.jpg" alt="Leonie">
           <h3>Leonie</h3>
           <div class="role">Co-Owner</div>
           <p>Text folgt...</p>
         </div>
-                <div class="team-member">
+        
+        <div class="team-member">
           <img src="bild/team/pfeiltasten.png" alt="Pfeiltasten">
           <h3>Pfeiltasten</h3>
           <div class="role">Developer</div>
           <p>Text folgt...</p>
         </div>
+
         <div class="team-member">
           <img src="bild/team/olfialex.png" alt="OlfiAlex">
           <h3>OlfiAlex</h3>
           <div class="role">T-Developer</div>
           <p>Text folgt...</p>
         </div>
+
         <div class="team-member">
           <img src="bild/team/xtedary.png" alt="xTedary">
           <h3>xTedary</h3>
           <div class="role">Supporter</div>
           <p>Text folgt...</p>
         </div>
+
+        <div class="team-member">
+          <img src="bild/team/coro.png" alt="Corotexus_YT">
+          <h3>Corotexus_YT</h3>
+          <div class="role">Supporter</div>
+          <p><i>"Heyho ich bin Coro. 1999 gespawnt und stehts Multidimensional unterwegs. Immer wieder für gute Geschichten und Gaming zu haben."</i></p>
+        </div>
+
         <div class="team-member">
           <img src="bild/team/sturmbrecher.png" alt="Sturm_Brecher">
           <h3>Sturm_Brecher</h3>
