--- a/events.html
+++ b/events.html
@@ -39,17 +39,10 @@
         <div class="event-mc-block" style="background:#e3f6d5;">
           <div class="event-mc-header" style="background:#7ec850;">
             <span class="event-mc-icon">🎉</span>
-            <strong>ParadiseNetwork.us Server Release</strong>
+            <strong>Bald Verfügbar</strong>
           </div>
           <div class="event-mc-body">
-            <span>28. Juni 2025 -
-              14:00 Uhr
-            </span><br>
-            <span>Ort: ParadiseNetwork.us</span>
-            <p>Feiere mit uns den offiziellen Release von ParadiseNetwork!<br>
-            <hr>
-            Der Perfekte Zeitpunkt schon von beginn an dabei zu sein!</p>
-            </p>
+          <p>Sei gespannt :)</p>
           </div>
         </div>
         <div class="event-mc-block" style="background:#fffbe3;">
@@ -65,7 +58,7 @@
         </div>
       </div>
       <div class="events-mc-calendar">
-        <h4><span style="font-family: 'Segoe UI Emoji', 'Noto Color Emoji', sans-serif;">📅</span> Juni 2025</h4>
+        <h4><span style="font-family: 'Segoe UI Emoji', 'Noto Color Emoji', sans-serif;">📅</span> Juli 2025</h4>
         <div class="calendar-table-wrapper">
           <table class="calendar-table-mc">
             <thead>
@@ -75,7 +68,7 @@
             </thead>
             <tbody>
               <tr>
-                <td></td><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td><td>6</td>
+                <td></td><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td><td class="event-mc-day" title="End Event" data-event-title="End Event" data-event-desc="Am 26.07.2025 wird das End geöffnet und der erste Enderdrache bekämpft und das das Enderdrachenei findet einen Weg ins Paradies.">6</td>
               </tr>
               <tr>
                 <td>7</td><td>8</td><td>9</td><td>10</td><td>11</td>
@@ -89,7 +82,7 @@
                 <td>21</td><td>22</td><td>23</td><td>24</td><td>25</td><td>26</td><td>27</td>
               </tr>
               <tr>
-                <td class="event-mc-day" title="Server Release" data-event-title="Server Release" data-event-desc="Feiere mit uns den offiziellen Release von ParadiseNetwork! Der perfekte Zeitpunkt, schon von Beginn an dabei zu sein!">28</td>
+                <td>28</td>
                 <td>29</td><td>30</td><td>31</td><td></td><td></td><td></td>
               </tr>
             </tbody>
@@ -101,27 +94,48 @@
         <h4><span style="font-family: 'Segoe UI Emoji', 'Noto Color Emoji', sans-serif;">⏳</span> Vergangene Events</h4>
         <div class="event-mc-block past" style="background:#e3f0fa;">
           <div class="event-mc-header" style="background:#b5e0fa;">
-            <span class="event-mc-icon">🥚</span>
-            <strong>Es war einmal...</strong>
+            <span class="event-mc-icon">🎉</span>
+            <strong>ParadiseNetwork.us Server Release</strong>
           </div>
           <div class="event-mc-body">
             <span></span>
-            <p>Es war einmal ein Event.<br>
-              Aber dieses muss erst gewesen sein,<br>
-              damit es hier stehen kann.<br>
+            <p>28. Juni 2025 -
+              14:00 Uhr<br>
+              <br>
+            <i>ParadiseNetwork.us hat den Server eröffnet und die Community zog hinaus in die weiten des Paradiesischen Freebuilds, um ihren Platz in der Welt zu finden und sich dort anzusiedeln.<br>
+            <br>
+          Ab hier begann unsere Reise...</i>
             </p>
           </div>
         </div>
         <div class="event-mc-block past" style="background:#f0f0f0;">
           <div class="event-mc-header" style="background:#e0e0e0;">
-            <span class="event-mc-icon">❄️</span>
-            <strong>Es war Einmal...</strong>
+            <span class="event-mc-icon">🏆</span>
+            <strong>End Event</strong>
           </div>
           <div class="event-mc-body">
             <span></span>
-            <p>Es war einmal ein Event.<br>
-              Aber dieses muss erst gewesen sein,<br>
-              damit es hier stehen kann.<br>
+            <p>6. Juli 2025 -
+              20:15 Uhr<br>
+              <br>
+            <i>Die End Dimension wurde eröffnet und die Community besiegte den ersten Enderdrachen.<br>
+            <br>
+            Das erste Enderdrachen Ei<br> 
+            wurde von <mark>Oskarpvp1</mark> erbeutet.<br>
+            <br>
+          Diese Spieler waren beim Event dabei:<br>
+        <hr>
+            <ul class="event-player-list" style="margin:0 0 0 1.2em; padding:0; list-style:none; font-size:1.05em;">
+              <li><span style="font-family:'Segoe UI Emoji','Noto Color Emoji',sans-serif;">🥚</span> <strong>Oskarpvp1</strong></li>
+              <li><span style="font-family:'Segoe UI Emoji','Noto Color Emoji',sans-serif;">🐲</span> Duolingoprime</li>
+              <li><span style="font-family:'Segoe UI Emoji','Noto Color Emoji',sans-serif;">🐲</span> Bijamjy</li>
+              <li><span style="font-family:'Segoe UI Emoji','Noto Color Emoji',sans-serif;">🐲</span> Pfeiltasten</li>
+              <li><span style="font-family:'Segoe UI Emoji','Noto Color Emoji',sans-serif;">🐲</span> slay__SLAY</li>
+              <li><span style="font-family:'Segoe UI Emoji','Noto Color Emoji',sans-serif;">🐲</span> Sturm_Brecher</li>
+              <li><span style="font-family:'Segoe UI Emoji','Noto Color Emoji',sans-serif;">🐲</span> Minecrafter45329</li>
+              <li><span style="font-family:'Segoe UI Emoji','Noto Color Emoji',sans-serif;">🐲</span> 1wc_msmc_fmw</li>
+            </ul>
+            <i style="display:block; margin-top:0.7em; color:#888;">Danke für eure Teilnahme am allerersten End Event!</i>
             </p>
           </div>
         </div>
